# hexroll3

./: .gitattributes  .gitignore  CHANGELOG  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: release.yml
build-deps/macos/: Info.plist  appicon.icns
hexroll3/: Cargo.toml  run_pair.sh
hexroll3-app/: Cargo.toml  build.rs
hexroll3-app/assets/fonts/licenses/oswald/: OFL.txt
hexroll3-app/src/: help.rs  intro.rs  lib.rs  loading.rs  main.rs  main.ts  version.rs
hexroll3-app/src/audio/: mod.rs
hexroll3-app/src/battlemaps/: battlemap.wgsl  battlemap_dial.rs  battlemaps.rs  caves.rs  city.rs  doors.rs  drawing.rs  dungeon.rs  effects.rs  helpers.rs  mod.rs  ruler.rs  settlement.rs  settlement_dial.rs  village.rs  wall.rs
hexroll3-app/src/clients/: controller.rs  http.rs  mod.rs  model.rs  standalone.rs
hexroll3-app/src/content/: clipboard.rs  context.rs  demidom.rs  header.rs  mod.rs  page.rs  spoiler.rs  tts.rs  viewport.rs
hexroll3-app/src/dialogs/: mod.rs  ui.rs
hexroll3-app/src/dice/: dice.rs  dice.wgsl  dice_mat.wgsl  mod.rs
hexroll3-app/src/hexmap/: borderlines.rs  builder.rs  curve_tiles.rs  data.rs  daynight.rs  editor.rs  elements.rs  fader.rs  grid.rs  hex_dial.rs  mod.rs  plugin.rs  prepare.rs  revealing.rs  selecting.rs  setup.rs  spawn.rs  sync.rs  themes.rs  tiles.rs
hexroll3-app/src/hexmap/shaders/: background_material.wgsl  hex_material.wgsl  river_material.wgsl  simple_background_material.wgsl  tile_material.wgsl  trail_material.wgsl
hexroll3-app/src/hud/: dicebar.rs  drawer.rs  help.rs  menu.rs  menubar.rs  mod.rs  searchbar.rs  shortcuts.rs  snackbar.rs  toggles.rs  vttbar.rs
hexroll3-app/src/shared/: asynchttp.rs  camera.rs  curve.rs  disc.rs  dragging.rs  effects.rs  geometry.rs  gltf.rs  input.rs  labels.rs  layers.rs  mod.rs  poly.rs  settings.rs  snapshot.rs  spawnq.rs  svg.rs  tweens.rs  vtt.rs
hexroll3-app/src/shared/widgets/: buttons.rs  cursor.rs  dial.rs  knob.rs  link.rs  list.rs  mod.rs  modal.rs
hexroll3-app/src/tokens/: control.rs  initiative.rs  library.rs  mod.rs  spawn.rs  sync.rs  token_dial.rs  tokens.rs
hexroll3-app/src/vtt/: mod.rs  network.rs  sync.rs
hexroll3-cartographer/: Cargo.toml
hexroll3-cartographer/src/: dungeons.rs  hexmap.rs  lib.rs  watabou.rs
hexroll3-dungeoneer/: Cargo.toml
hexroll3-dungeoneer/src/: cave.rs  dungeon.rs  lib.rs  main.rs
hexroll3-scroll/: Cargo.toml  scroll.pest
hexroll3-scroll-data/dungeons/: containers.scroll  dungeon.scroll  temple.scroll
hexroll3-scroll-data/dungeons/encounters/: aberrations.scroll  caves.scroll  magical.scroll
hexroll3-scroll-data/hooks/quests/: lost_item.scroll  missing_person.scroll
hexroll3-scroll-data/npc/: character.scroll  equipment.scroll
hexroll3-scroll-data/osr/: equipment.scroll  magic_items.scroll  main.scroll  monsters.scroll  treasure.scroll
hexroll3-scroll-data/osr/dungeons/: appearance.scroll  areas.scroll  cave.scroll  containers.scroll  debris.scroll  doors.scroll  dungeon.scroll  fountain.scroll  fungi.scroll  mouth.scroll  portal.scroll  remains.scroll  temple.scroll  tomb.scroll  traps.scroll
hexroll3-scroll-data/osr/dungeons/encounters/: aberrations.scroll  humanoids.scroll  magical.scroll  ooze.scroll  temples.scroll  undead.scroll  vermins.scroll
hexroll3-scroll-data/osr/encounters/: dungeon.scroll  wilderness.scroll
hexroll3-scroll-data/osr/factions/: cult.scroll
hexroll3-scroll-data/osr/hooks/: artifacts.scroll  quest.scroll  relation.scroll  rumor.scroll
hexroll3-scroll-data/osr/hooks/quests/: delivery.scroll  lost_item.scroll  missing_person.scroll
hexroll3-scroll-data/osr/monsters/: activities.scroll
hexroll3-scroll-data/osr/names/: npc.scroll  places.scroll
hexroll3-scroll-data/osr/npc/: character.scroll
hexroll3-scroll-data/osr/osr/: monsters.scroll  npc.scroll  npc_allocs.scroll  spell_components.scroll
hexroll3-scroll-data/osr/realms/: base.scroll  faction.scroll  realm.scroll
hexroll3-scroll-data/osr/settlements/: base.scroll  city.scroll  district.scroll  dwelling.scroll  folk.scroll  shops.scroll  tavern.scroll  town.scroll  village.scroll
hexroll3-scroll-data/osr/utils/: sigils.scroll
hexroll3-scroll-data/osr/wilderness/: hex.scroll  jungle.scroll  landmarks.scroll  mountains.scroll  ocean.scroll  plains.scroll  region.scroll  tundra.scroll
hexroll3-scroll-data/realms/: ruler.scroll
hexroll3-scroll-data/settlements/: shops.scroll  tavern.scroll  town.scroll
hexroll3-scroll-data/wilderness/: hex.scroll  mountains.scroll  ocean.scroll  swamps.scroll  weather.scroll
hexroll3-scroll/src/: commands.rs  frame.rs  generators.rs  instance.rs  lib.rs  parser.rs  renderer.rs  renderer_env.rs  repository.rs  semantics.rs
hexroll3-scroll/tests/: generators.rs  renderer.rs
hexroll3-signaling/: Cargo.toml
hexroll3-testbed/: Cargo.toml
hexroll3-testbed/src/: app.rs
hexroll3-testbed/src/app/helpers/: actions.rs  config.rs  html.rs  logger.rs
hexroll3-testbed/src/app/views/: preview.rs  raw_json.rs  rendered_json.rs
