[package]
name = "hexroll3-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[features]
default= []
dev =["dep:bevy-inspector-egui"]
soft_shadows = ["bevy/experimental_pbr_pcss"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
bevy.workspace = true

# Bevy crates that were modded:
# 
# Ancestor markers made public
avian3d = { git = "https://github.com/hexroll/avian", branch="hexroll"}
# Significantly changed. Most importantly will not allow zooming in Y<0.0
bevy_editor_cam = { git = "https://github.com/hexroll/bevy_editor_cam", branch="hexroll-trim-0.17"}
# Added smooth scrolling
bevy_simple_scroll_view = { git = "https://github.com/hexroll/bevy_simple_scroll_view", branch="hexroll"}
# Protect against missing entities
bevy_mod_billboard = { git = "https://github.com/hexroll/bevy_mod_billboard", branch="hexroll" }
# Keep using templated tween lenses for now
bevy_tweening = { git = "https://github.com/hexroll/bevy_tweening", branch="hexroll-0.17"}

# Bevy crates that are used as-is:
bevy_mod_outline = { version="0.11" }
bevy_matchbox = { version="0.13" }
bevy_rich_text3d = { version="0.5.1" }
hexx = { version="0.23", features=["serde"] }
bevy_ui_text_input = { version="0.6" }
bevy_vector_shapes = { version= "0.11" }
bevy_seedling = { version="0.6.1" }
bevy_hanabi = { version = "0.17", default-features = false, features = ["3d","serde"] }

bevy-inspector-egui = { version = "0.35.0", optional = true }

cosmic-text = {version = "0.14"}

omagari = {git = "https://github.com/hexroll/omagari"}

bincode = "1.3.3"
ureq = { version="3.1.4", features=["cookies", "json"] }
html5ever = "0.29.0"
lamport = "0.2.0"
lyon = "1.0.1"
regex = "1.11.1"
smallvec = "1.15.0"
chrono = "0.4.41"
ron = "0.10"
dirs = "6.0.0"
[target.'cfg(windows)'.build-dependencies]
embed-resource = "3.0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy-inspector-egui = "0.35"
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys.workspace = true

[target.wasm32-unknown-unknown.dependencies]
getrandom_v2 = { version = "0.2", features = ["js"], package = "getrandom" }
getrandom    = { version = "0.3", features = ["wasm_js"] }


[patch."https://github.com/bevyengine/bevy"]
bevy = {git = "https://github.com/hexroll/bevy" ,branch="hexroll3" }
bevy_a11y = { git = "https://github.com/hexroll/bevy", package="bevy_a11y"  ,branch="hexroll3"}
bevy_android = { git = "https://github.com/hexroll/bevy", package="bevy_android" ,branch="hexroll3"}
bevy_animation = { git = "https://github.com/hexroll/bevy", package="bevy_animation" ,branch="hexroll3"}
bevy_anti_alias = { git = "https://github.com/hexroll/bevy", package="bevy_anti_alias" ,branch="hexroll3"}
bevy_app = { git = "https://github.com/hexroll/bevy", package="bevy_app" ,branch="hexroll3"}
bevy_asset = { git = "https://github.com/hexroll/bevy", package="bevy_asset" ,branch="hexroll3"}
bevy_audio = { git = "https://github.com/hexroll/bevy", package="bevy_audio" ,branch="hexroll3"}
bevy_camera = { git = "https://github.com/hexroll/bevy", package="bevy_camera" ,branch="hexroll3"}
bevy_color = { git = "https://github.com/hexroll/bevy", package="bevy_color" ,branch="hexroll3"}
bevy_core_pipeline = { git = "https://github.com/hexroll/bevy", package="bevy_core_pipeline" ,branch="hexroll3"}
bevy_derive = { git = "https://github.com/hexroll/bevy", package="bevy_derive" ,branch="hexroll3"}
bevy_dev_tools = { git = "https://github.com/hexroll/bevy", package="bevy_dev_tools" ,branch="hexroll3"}
bevy_diagnostic = { git = "https://github.com/hexroll/bevy", package="bevy_diagnostic" ,branch="hexroll3"}
bevy_dylib = { git = "https://github.com/hexroll/bevy", package="bevy_dylib" ,branch="hexroll3"}
bevy_ecs = { git = "https://github.com/hexroll/bevy", package="bevy_ecs" ,branch="hexroll3"}
bevy_encase_derive = { git = "https://github.com/hexroll/bevy", package="bevy_encase_derive" ,branch="hexroll3"}
bevy_feathers = { git = "https://github.com/hexroll/bevy", package="bevy_feathers" ,branch="hexroll3"}
bevy_gilrs = { git = "https://github.com/hexroll/bevy", package="bevy_gilrs" ,branch="hexroll3"}
bevy_gizmos = { git = "https://github.com/hexroll/bevy", package="bevy_gizmos" ,branch="hexroll3"}
bevy_gltf = { git = "https://github.com/hexroll/bevy", package="bevy_gltf" ,branch="hexroll3"}
bevy_image = { git = "https://github.com/hexroll/bevy", package="bevy_image" ,branch="hexroll3"}
bevy_input = { git = "https://github.com/hexroll/bevy", package="bevy_input" ,branch="hexroll3"}
bevy_input_focus = { git = "https://github.com/hexroll/bevy", package="bevy_input_focus" ,branch="hexroll3"}
bevy_internal = { git = "https://github.com/hexroll/bevy", package="bevy_internal" ,branch="hexroll3"}
bevy_light = { git = "https://github.com/hexroll/bevy", package="bevy_light" ,branch="hexroll3"}
bevy_log = { git = "https://github.com/hexroll/bevy", package="bevy_log" ,branch="hexroll3"}
bevy_macro_utils = { git = "https://github.com/hexroll/bevy", package="bevy_macro_utils" ,branch="hexroll3"}
bevy_math = { git = "https://github.com/hexroll/bevy", package="bevy_math" ,branch="hexroll3"}
bevy_mesh = { git = "https://github.com/hexroll/bevy", package="bevy_mesh" ,branch="hexroll3"}
bevy_pbr = { git = "https://github.com/hexroll/bevy", package="bevy_pbr" ,branch="hexroll3"}
bevy_picking = { git = "https://github.com/hexroll/bevy", package="bevy_picking" ,branch="hexroll3"}
bevy_platform = { git = "https://github.com/hexroll/bevy", package="bevy_platform" ,branch="hexroll3"}
bevy_post_process = { git = "https://github.com/hexroll/bevy", package="bevy_post_process" ,branch="hexroll3"}
bevy_ptr = { git = "https://github.com/hexroll/bevy", package="bevy_ptr" ,branch="hexroll3"}
bevy_reflect = { git = "https://github.com/hexroll/bevy", package="bevy_reflect"  ,branch="hexroll3"}
bevy_remote = { git = "https://github.com/hexroll/bevy", package="bevy_remote"  ,branch="hexroll3"}
bevy_render = { git = "https://github.com/hexroll/bevy", package="bevy_render"  ,branch="hexroll3"}
bevy_scene = { git = "https://github.com/hexroll/bevy", package="bevy_scene"  ,branch="hexroll3"}
bevy_shader = { git = "https://github.com/hexroll/bevy", package="bevy_shader"  ,branch="hexroll3"}
bevy_solari = { git = "https://github.com/hexroll/bevy", package="bevy_solari"  ,branch="hexroll3"}
bevy_sprite = { git = "https://github.com/hexroll/bevy", package="bevy_sprite"  ,branch="hexroll3"}
bevy_sprite_render = { git = "https://github.com/hexroll/bevy", package="bevy_sprite_render"  ,branch="hexroll3"}
bevy_state = { git = "https://github.com/hexroll/bevy", package="bevy_state"  ,branch="hexroll3"}
bevy_tasks = { git = "https://github.com/hexroll/bevy", package="bevy_tasks"  ,branch="hexroll3"}
bevy_text = { git = "https://github.com/hexroll/bevy", package="bevy_text"  ,branch="hexroll3"}
bevy_time = { git = "https://github.com/hexroll/bevy", package="bevy_time"  ,branch="hexroll3"}
bevy_transform = { git = "https://github.com/hexroll/bevy", package="bevy_transform"  ,branch="hexroll3"}
bevy_ui = { git = "https://github.com/hexroll/bevy", package="bevy_ui"  ,branch="hexroll3"}
bevy_ui_render = { git = "https://github.com/hexroll/bevy", package="bevy_ui_render"  ,branch="hexroll3"}
bevy_ui_widgets = { git = "https://github.com/hexroll/bevy", package="bevy_ui_widgets"  ,branch="hexroll3"}
bevy_utils = { git = "https://github.com/hexroll/bevy", package="bevy_utils"  ,branch="hexroll3"}
bevy_window = { git = "https://github.com/hexroll/bevy", package="bevy_window"  ,branch="hexroll3"}
bevy_winit = { git = "https://github.com/hexroll/bevy", package="bevy_winit"  ,branch="hexroll3"}

[patch.crates-io]
bevy = {git = "https://github.com/hexroll/bevy" ,branch="hexroll3"}
bevy_a11y = { git = "https://github.com/hexroll/bevy", package="bevy_a11y"  ,branch="hexroll3"}
bevy_android = { git = "https://github.com/hexroll/bevy", package="bevy_android" ,branch="hexroll3"}
bevy_animation = { git = "https://github.com/hexroll/bevy", package="bevy_animation" ,branch="hexroll3"}
bevy_anti_alias = { git = "https://github.com/hexroll/bevy", package="bevy_anti_alias" ,branch="hexroll3"}
bevy_app = { git = "https://github.com/hexroll/bevy", package="bevy_app" ,branch="hexroll3"}
bevy_asset = { git = "https://github.com/hexroll/bevy", package="bevy_asset" ,branch="hexroll3"}
bevy_audio = { git = "https://github.com/hexroll/bevy", package="bevy_audio" ,branch="hexroll3"}
bevy_camera = { git = "https://github.com/hexroll/bevy", package="bevy_camera" ,branch="hexroll3"}
bevy_color = { git = "https://github.com/hexroll/bevy", package="bevy_color" ,branch="hexroll3"}
bevy_core_pipeline = { git = "https://github.com/hexroll/bevy", package="bevy_core_pipeline" ,branch="hexroll3"}
bevy_derive = { git = "https://github.com/hexroll/bevy", package="bevy_derive" ,branch="hexroll3"}
bevy_dev_tools = { git = "https://github.com/hexroll/bevy", package="bevy_dev_tools" ,branch="hexroll3"}
bevy_diagnostic = { git = "https://github.com/hexroll/bevy", package="bevy_diagnostic" ,branch="hexroll3"}
bevy_dylib = { git = "https://github.com/hexroll/bevy", package="bevy_dylib" ,branch="hexroll3"}
bevy_ecs = { git = "https://github.com/hexroll/bevy", package="bevy_ecs" ,branch="hexroll3"}
bevy_encase_derive = { git = "https://github.com/hexroll/bevy", package="bevy_encase_derive" ,branch="hexroll3"}
bevy_feathers = { git = "https://github.com/hexroll/bevy", package="bevy_feathers" ,branch="hexroll3"}
bevy_gilrs = { git = "https://github.com/hexroll/bevy", package="bevy_gilrs" ,branch="hexroll3"}
bevy_gizmos = { git = "https://github.com/hexroll/bevy", package="bevy_gizmos" ,branch="hexroll3"}
bevy_gltf = { git = "https://github.com/hexroll/bevy", package="bevy_gltf" ,branch="hexroll3"}
bevy_image = { git = "https://github.com/hexroll/bevy", package="bevy_image" ,branch="hexroll3"}
bevy_input = { git = "https://github.com/hexroll/bevy", package="bevy_input" ,branch="hexroll3"}
bevy_input_focus = { git = "https://github.com/hexroll/bevy", package="bevy_input_focus" ,branch="hexroll3"}
bevy_internal = { git = "https://github.com/hexroll/bevy", package="bevy_internal" ,branch="hexroll3"}
bevy_light = { git = "https://github.com/hexroll/bevy", package="bevy_light" ,branch="hexroll3"}
bevy_log = { git = "https://github.com/hexroll/bevy", package="bevy_log" ,branch="hexroll3"}
bevy_macro_utils = { git = "https://github.com/hexroll/bevy", package="bevy_macro_utils" ,branch="hexroll3"}
bevy_math = { git = "https://github.com/hexroll/bevy", package="bevy_math" ,branch="hexroll3"}
bevy_mesh = { git = "https://github.com/hexroll/bevy", package="bevy_mesh" ,branch="hexroll3"}
bevy_pbr = { git = "https://github.com/hexroll/bevy", package="bevy_pbr" ,branch="hexroll3"}
bevy_picking = { git = "https://github.com/hexroll/bevy", package="bevy_picking" ,branch="hexroll3"}
bevy_platform = { git = "https://github.com/hexroll/bevy", package="bevy_platform" ,branch="hexroll3"}
bevy_post_process = { git = "https://github.com/hexroll/bevy", package="bevy_post_process" ,branch="hexroll3"}
bevy_ptr = { git = "https://github.com/hexroll/bevy", package="bevy_ptr" ,branch="hexroll3"}
bevy_reflect = { git = "https://github.com/hexroll/bevy", package="bevy_reflect"  ,branch="hexroll3"}
bevy_remote = { git = "https://github.com/hexroll/bevy", package="bevy_remote"  ,branch="hexroll3"}
bevy_render = { git = "https://github.com/hexroll/bevy", package="bevy_render"  ,branch="hexroll3"}
bevy_scene = { git = "https://github.com/hexroll/bevy", package="bevy_scene"  ,branch="hexroll3"}
bevy_shader = { git = "https://github.com/hexroll/bevy", package="bevy_shader"  ,branch="hexroll3"}
bevy_solari = { git = "https://github.com/hexroll/bevy", package="bevy_solari"  ,branch="hexroll3"}
bevy_sprite = { git = "https://github.com/hexroll/bevy", package="bevy_sprite"  ,branch="hexroll3"}
bevy_sprite_render = { git = "https://github.com/hexroll/bevy", package="bevy_sprite_render"  ,branch="hexroll3"}
bevy_state = { git = "https://github.com/hexroll/bevy", package="bevy_state"  ,branch="hexroll3"}
bevy_tasks = { git = "https://github.com/hexroll/bevy", package="bevy_tasks"  ,branch="hexroll3"}
bevy_text = { git = "https://github.com/hexroll/bevy", package="bevy_text"  ,branch="hexroll3"}
bevy_time = { git = "https://github.com/hexroll/bevy", package="bevy_time"  ,branch="hexroll3"}
bevy_transform = { git = "https://github.com/hexroll/bevy", package="bevy_transform"  ,branch="hexroll3"}
bevy_ui = { git = "https://github.com/hexroll/bevy", package="bevy_ui"  ,branch="hexroll3"}
bevy_ui_render = { git = "https://github.com/hexroll/bevy", package="bevy_ui_render"  ,branch="hexroll3"}
bevy_ui_widgets = { git = "https://github.com/hexroll/bevy", package="bevy_ui_widgets"  ,branch="hexroll3"}
bevy_utils = { git = "https://github.com/hexroll/bevy", package="bevy_utils"  ,branch="hexroll3"}
bevy_window = { git = "https://github.com/hexroll/bevy", package="bevy_window"  ,branch="hexroll3"}
bevy_winit = { git = "https://github.com/hexroll/bevy", package="bevy_winit"  ,branch="hexroll3"}
