#
# Copyright (C) 2020-2025 Pen, Dice & Paper
#
# This program is dual-licensed under the following terms:
#
# Option 1: (Non-Commercial) GNU Affero General Public License (AGPL)
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program. If not, see <http://www.gnu.org/licenses/>.
#
# Option 2: Commercial License
# For commercial use, you are required to obtain a separate commercial
# license. Please contact ithai at pendicepaper.com
# for more information about commercial licensing terms.
#
[package]
name = "hexroll3-cartographer"
version = "0.1.1"
authors = ["Pen, Dice & Paper"]
description = "HEXROLL3 Scroll - the sandbox content generator"
license-file = "../LICENSE"
repository = "https://github.com/hexroll/hexroll3"
homepage = "https://hexroll.app"
readme = "../README.md"
edition = "2024"

[dependencies]
anyhow = "1.0.82"
serde = {version="1.0.216",features = ["derive"]}
serde_json = { version="1.0.134",features = ["preserve_order"]}
rand = {version="0.8.5", features=["std_rng"]}
rand_chacha = "0.3.1"
lz4_flex = {version="0.13.0"}

hexroll3-scroll = { path = "../hexroll3-scroll" }
hexroll3-dungeoneer = { path = "../hexroll3-dungeoneer" }

[lib]
path = "src/lib.rs"

